--- a/Crispy/.env.example
+++ b/Crispy/.env.example
@@ -21,9 +21,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=crispy
 # DB_USERNAME=root
 # DB_PASSWORD=
 
