--- a/Crispy/.env.example
+++ b/Crispy/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Crispy
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2d96bqDfbminBkoBZGBFbbrrQ1aP2KcDY4deqvOK3Ak=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=crispy
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
